# percival-deep-research

./: .env.example  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yml  llm_bridge.py  pyproject.toml  server.py  utils.py
percival_research/: __init__.py  app.py  health.py  metrics.py  patches.py  prompts.py  prompts_versions.py  resources.py  utils_loader.py
percival_research/cache/: __init__.py
percival_research/retrievers/: __init__.py  brave.py  duckduckgo.py
percival_research/tools/: __init__.py  deep_research.py  get_research_context.py  get_research_sources.py  quick_search.py  write_report.py
scripts/: patch_gpt_researcher.py
tests/: conftest.py  test_audit_fixes.py  test_audit_round2.py  test_audit_round3.py  test_audit_round3_nano.py  test_audit_round4_nano.py  test_audit_round5_placeholder.py  test_audit_round_nano_bugs.py  test_config.py  test_extensibility.py  test_llm_bridge.py  test_mcp_server.py  test_observability.py  test_prompt_research_query.py  test_quick_wins.py  test_resource_research.py  test_robustness.py  test_tools_deep_research.py  test_tools_get.py  test_tools_quick_search.py  test_tools_write_report.py  test_v22_simplification.py
