[project]
name = "percival-deep-research"
version = "1.0.0"
description = "Percival Deep Research MCP Server — multi-source web research and report generation, optimized for the Nanobot agent ecosystem"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "percival.OS contributors" }
]
keywords = ["mcp", "percival", "gpt-researcher", "ai", "research", "fastmcp", "nanobot"]

dependencies = [
    "gpt-researcher>=0.14.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "fastmcp>=3.2.0,<4.0.0",
    "loguru>=0.7.0,<1.0.0",
    "langchain-mcp-adapters",
    "langchain",
    "langchain-community",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sseclient-py>=1.7.0,<2.0.0",
]

[project.scripts]
percival-deep-research = "server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "server.py",
    "utils.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running MCP server (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
