[project]
name = "percival-deep-research"
version = "2.3.1"
description = "Percival Deep Research MCP Server — multi-source web research and report generation, optimized for the Nanobot agent ecosystem"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "percival.OS contributors" }
]
keywords = ["mcp", "percival", "gpt-researcher", "ai", "research", "fastmcp", "nanobot"]

dependencies = [
    "gpt-researcher>=0.14.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "fastmcp>=3.2.0,<4.0.0",
    "loguru>=0.7.0,<1.0.0",
    "langchain-mcp-adapters",
    "langchain",
    "langchain-community",
]

[project.urls]
Repository = "https://github.com/bill-kopp-ai-dev/percival.OS"
Issues = "https://github.com/bill-kopp-ai-dev/percival.OS/issues"
Changelog = "https://github.com/bill-kopp-ai-dev/percival.OS/blob/main/percival-deep-research/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sseclient-py>=1.7.0,<2.0.0",
]

[project.scripts]
percival-deep-research = "server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "server.py",
    "config.py",
    "llm_bridge.py",
    "utils.py",
    "percival_research/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running MCP server (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["server.py", "utils.py", "config.py", "llm_bridge.py", "percival_research"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
fail_under = 70
